tests/negative/regression/r12.orng
fn main() -> Int { 
    if let const x: -x; true {}
}